k8s/02-configmap/frontend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  #
  # The frontend doesn't use many resources to serve static JS + CSS from an nginx container, so this is less about
  # performance and more about redundancy.
  #
  replicas: 2

  #
  # Whenever k8s decides to create one or more pod for this deployment, it will use the YAML here to form
  # the contents of the pods resource definition YAML.
  #
  template:
    metadata:
      labels:
        app: frontend
    spec:
      #
      # Create a "volume" that can be used by the container when being created.
      # Will allow Kubernetes resources such as ConfigMaps and Secrets which contain files to be made
      # available as files on disk in the container. This is important because it is impracticle and insecure
      # to hardcode config values into your docker image at build time.
      #
      volumes:
        - name: config-volume
          configMap:
            name: frontend

      containers:
        - name: frontend
          image: pserwylo/cognizant-k8s-pres-frontend:latest
          ports:
            - containerPort: 8080

          #
          # Use the volume created above, which contains a "config.json" file from within the "frontend-config-json"
          # ConfigMap, and make the "config.json" file available in the webroot (overwriting the example one in
          # the docker container).
          #
          volumeMounts:
            - mountPath: /usr/share/nginx/html/config.json
              name: config-volume
              subPath: config.json
